--- a/MaintenanceApp/app/src/main/res/layout/activity_report_page.xml
+++ b/MaintenanceApp/app/src/main/res/layout/activity_report_page.xml
@@ -9,8 +9,11 @@
     <ScrollView
         android:layout_width="369dp"
         android:layout_height="495dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="16dp">
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,7 +58,7 @@
 
             <Spinner
                 android:id="@+id/spnPriority"
-                android:layout_width="109dp"
+                android:layout_width="152dp"
                 android:layout_height="wrap_content" />
 
             <TextView
