--- a/MaintenanceApp/app/src/main/res/layout/activity_report_page.xml
+++ b/MaintenanceApp/app/src/main/res/layout/activity_report_page.xml
@@ -7,13 +7,14 @@
     tools:context="uk.ac.napier.maintenanceapp.ReportPage">
 
     <ScrollView
-        android:layout_width="369dp"
+        android:layout_width="344dp"
         android:layout_height="495dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
 
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,6 +29,10 @@
                 tools:layout_editor_absoluteX="30dp"
                 tools:layout_editor_absoluteY="16dp" />
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
             <Spinner
                 android:id="@+id/spnHome"
                 android:layout_width="match_parent"
@@ -35,11 +40,19 @@
                 tools:layout_editor_absoluteX="125dp"
                 tools:layout_editor_absoluteY="16dp" />
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
             <TextView
                 android:id="@+id/lblTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/repTitle" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
 
             <EditText
                 android:id="@+id/txtTitle"
@@ -50,16 +63,28 @@
                 tools:layout_editor_absoluteX="30dp"
                 tools:layout_editor_absoluteY="55dp" />
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
             <TextView
                 android:id="@+id/lblPriority"
                 android:layout_width="73dp"
                 android:layout_height="wrap_content"
                 android:text="@string/repPriority" />
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
             <Spinner
                 android:id="@+id/spnPriority"
                 android:layout_width="152dp"
                 android:layout_height="wrap_content" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
 
             <TextView
                 android:id="@+id/lblDateSubmit"
@@ -68,6 +93,10 @@
                 android:text="@string/repDateSubmitted"
                 tools:layout_editor_absoluteX="30dp"
                 tools:layout_editor_absoluteY="153dp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
 
             <DatePicker
                 android:id="@+id/dteDateSubmitted"
@@ -79,6 +108,10 @@
                 tools:layout_editor_absoluteX="116dp"
                 tools:layout_editor_absoluteY="16dp" />
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
             <TextView
                 android:id="@+id/lblDateDue"
                 android:layout_width="match_parent"
@@ -86,6 +119,10 @@
                 android:text="@string/repDateDue"
                 tools:layout_editor_absoluteX="30dp"
                 tools:layout_editor_absoluteY="114dp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
 
             <DatePicker
                 android:id="@+id/dteDateDue"
@@ -97,11 +134,19 @@
                 tools:layout_editor_absoluteX="116dp"
                 tools:layout_editor_absoluteY="16dp" />
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
             <TextView
                 android:id="@+id/lblDesc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/repDesc" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
 
             <EditText
                 android:id="@+id/txtDesc"
@@ -110,17 +155,31 @@
                 android:ems="10"
                 android:inputType="textMultiLine" />
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
             <TextView
                 android:id="@+id/lblLocation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/repLocation" />
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
             <ImageView
                 android:id="@+id/imgLocation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:srcCompat="@android:drawable/btn_star" />
+
+            <Button
+                android:id="@+id/btnSend"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/repSend" />
 
         </LinearLayout>
     </ScrollView>
