--- a/MaintenanceApp/app/src/main/res/layout/activity_report_page.xml
+++ b/MaintenanceApp/app/src/main/res/layout/activity_report_page.xml
@@ -98,15 +98,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="10dp" />
 
-            <DatePicker
-                android:id="@+id/dteDateSubmitted"
+            <TextView
+                android:id="@+id/txtDateSubmitted"
                 android:layout_width="238dp"
-                android:layout_height="141dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:calendarViewShown="false"
-                android:datePickerMode="spinner"
-                tools:layout_editor_absoluteX="116dp"
-                tools:layout_editor_absoluteY="16dp" />
+                android:textAlignment="center"
+                android:text="" />
 
             <Space
                 android:layout_width="match_parent"
