--- a/MaintenanceApp/app/src/main/res/layout/activity_front_page.xml
+++ b/MaintenanceApp/app/src/main/res/layout/activity_front_page.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context="uk.ac.napier.maintenanceapp.FrontPage">
 
     <Button
@@ -11,22 +12,27 @@
         android:layout_width="134dp"
         android:layout_height="84dp"
         android:layout_marginRight="113dp"
-        android:layout_marginTop="276dp"
         android:text="@string/btnTasks"
+        android:background="@drawable/corner_button"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="142dp"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_marginBottom="154dp"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/btnReport" />
 
     <Button
         android:id="@+id/btnReport"
         android:layout_width="134dp"
         android:layout_height="84dp"
         android:text="@string/btnReport"
+        android:background="@drawable/corner_button"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="140dp"
         android:layout_marginRight="113dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_alignBottom="@+id/btnTasks"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="137dp" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
