--- a/MaintenanceApp/app/src/main/res/layout/activity_register_page.xml
+++ b/MaintenanceApp/app/src/main/res/layout/activity_register_page.xml
@@ -4,6 +4,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context="uk.ac.napier.maintenanceapp.RegisterPage">
 
+    <EditText
+        android:id="@+id/txtRegName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Enter Name"
+        android:layout_marginTop="102dp"
+        app:layout_constraintTop_toBottomOf="@+id/lblRegWelcome"
+        android:layout_marginLeft="72dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <EditText
+        android:id="@+id/txtRegPass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Create password"
+        android:inputType="textPassword"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtRegDOB"
+        android:layout_marginLeft="72dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <EditText
+        android:id="@+id/txtRegDOB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Date of Birth"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtRegName"
+        android:layout_marginLeft="72dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/lblRegWelcome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/regWelcome"
+        android:textColor="#111"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="139dp"
+        android:layout_marginLeft="21dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <Button
+        android:id="@+id/btnRegSubmit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btnRegister"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtRegPass"
+        android:layout_marginLeft="144dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 </android.support.constraint.ConstraintLayout>
