--- a/MaintenanceApp/app/src/main/res/layout/activity_register_page.xml
+++ b/MaintenanceApp/app/src/main/res/layout/activity_register_page.xml
@@ -25,23 +25,10 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Create password"
-        android:inputType="textPassword"
-        android:layout_marginTop="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtRegDOB"
         android:layout_marginLeft="72dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <EditText
-        android:id="@+id/txtRegDOB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Date of Birth"
-        android:layout_marginTop="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtRegName"
-        android:layout_marginLeft="72dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="100dp" />
 
     <TextView
         android:id="@+id/lblRegWelcome"
@@ -63,4 +50,19 @@
         app:layout_constraintTop_toBottomOf="@+id/txtRegPass"
         android:layout_marginLeft="136dp"
         app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/txtregDisplay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/regDate"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtRegName"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtRegPass"
+        app:layout_constraintVertical_bias="0.448"
+        android:background="#ffff"
+        android:layout_marginLeft="120dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
