--- a/MaintenanceApp/app/src/main/res/layout/activity_report_page.xml
+++ b/MaintenanceApp/app/src/main/res/layout/activity_report_page.xml
@@ -10,11 +10,11 @@
         android:layout_width="344dp"
         android:layout_height="495dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
 
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp">
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -167,21 +167,27 @@
                 android:layout_height="20dp" />
 
             <TextView
-                android:id="@+id/lblLocation"
+                android:id="@+id/lblPicture"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/repLocation"
-                android:textColor="#110000"/>
+                android:text="@string/repPicture"
+                android:textColor="#110000" />
 
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="10dp" />
 
             <ImageView
-                android:id="@+id/imgLocation"
+                android:id="@+id/imgPicture"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:srcCompat="@android:drawable/btn_star" />
+                app:srcCompat="@android:color/background_light" />
+
+            <Button
+                android:id="@+id/btnAddPicture"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/repBtnPicture" />
 
             <Space
                 android:layout_width="match_parent"
