--- a/MaintenanceApp/app/src/main/res/layout/activity_front_page.xml
+++ b/MaintenanceApp/app/src/main/res/layout/activity_front_page.xml
@@ -17,9 +17,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="154dp"
         app:layout_constraintVertical_bias="0.0"
-        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
         android:layout_alignStart="@+id/btnReport" />
 
     <Button
@@ -31,8 +30,23 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginRight="113dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_alignBottom="@+id/btnTasks"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="137dp" />
+        android:layout_marginBottom="31dp"
+        android:layout_above="@+id/btnTasks"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/btnCompleted"
+        android:layout_width="134dp"
+        android:layout_height="84dp"
+        android:layout_marginBottom="99dp"
+        android:layout_marginRight="113dp"
+        android:background="@drawable/corner_button"
+        android:text="@string/btnCompletedTasks"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/btnTasks" />
 
 </RelativeLayout>
