--- a/MaintenanceApp/app/src/main/res/layout/activity_login_page2.xml
+++ b/MaintenanceApp/app/src/main/res/layout/activity_login_page2.xml
@@ -55,4 +55,14 @@
         android:layout_marginTop="26dp"
         android:text="@string/btnRegister" />
 
+    <ImageView
+        android:id="@+id/imgLPSettings"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="9dp"
+        android:layout_marginTop="9dp"
+        app:srcCompat="@drawable/settings" />
+
 </RelativeLayout>
