--- a/MaintenanceApp/app/src/main/res/layout/activity_register_page.xml
+++ b/MaintenanceApp/app/src/main/res/layout/activity_register_page.xml
@@ -14,10 +14,12 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="Enter Name"
-        android:layout_marginTop="78dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintTop_toBottomOf="@+id/lblRegWelcome"
         android:layout_marginLeft="72dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtRegPass" />
 
     <EditText
         android:id="@+id/txtRegPass"
@@ -28,7 +30,7 @@
         android:layout_marginLeft="72dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="100dp" />
+        android:layout_marginBottom="135dp" />
 
     <TextView
         android:id="@+id/lblRegWelcome"
@@ -37,7 +39,7 @@
         android:text="@string/regWelcome"
         android:textColor="#111"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="139dp"
+        android:layout_marginTop="181dp"
         android:layout_marginLeft="21dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -49,20 +51,6 @@
         android:layout_marginTop="23dp"
         app:layout_constraintTop_toBottomOf="@+id/txtRegPass"
         android:layout_marginLeft="136dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <TextView
-        android:id="@+id/txtregDisplay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/regDate"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtRegName"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/txtRegPass"
-        app:layout_constraintVertical_bias="0.448"
-        android:background="#ffff"
-        android:layout_marginLeft="120dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
