--- a/MaintenanceApp/app/src/main/res/layout/activity_completed_page.xml
+++ b/MaintenanceApp/app/src/main/res/layout/activity_completed_page.xml
@@ -63,14 +63,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="10dp" />
 
-                <EditText
+                <TextView
                     android:id="@+id/txtTitle"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:ems="10"
-                    android:inputType="textPersonName"
-                    tools:layout_editor_absoluteX="30dp"
-                    tools:layout_editor_absoluteY="55dp" />
+                    android:layout_height="wrap_content" />
 
                 <Space
                     android:layout_width="match_parent"
@@ -156,12 +152,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="10dp" />
 
-                <EditText
+                <TextView
                     android:id="@+id/txtDesc"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:inputType="textMultiLine" />
+                    android:layout_height="wrap_content" />
 
                 <Space
                     android:layout_width="match_parent"
@@ -199,13 +193,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="10dp" />
 
-                <EditText
+                <TextView
                     android:id="@+id/txtNotes"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:inputType="textMultiLine"
-                    android:textColor="#110000" />
+                    android:layout_height="wrap_content" />
 
                 <Space
                     android:layout_width="match_parent"
